<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flip Vehicle Widget</string>
    <string name="widget_not_connected">Not connected</string>
    <string name="widget_toggle_trunk">Trunk</string>
    <string name="widget_toggle_frunk">Frunk</string>
    <string name="widget_toggle_climate">Climate</string>
    <string name="widget_toggle_locks">Lock</string>
</resources>
